# SphereTDP

./: .gitignore  README.md
Latex/: andreas_publications.bib  build  diff.tex  diff_v2.tex  main.tex  mybibfile.bib  rebuttal.txt
Latex/Rebuttal/: rebuttal.tex  rebuttal.txt
Latex/Rebuttal_v1/: rebuttal.tex
Latex/Rebuttal_v2/: rebuttal.tex
Latex/images/: distances_fire.eps  histogram_fire.eps  lidarsetup.eps  pc_sphere1.eps  pc_sphere2.eps  scan-riegl-fire.eps  scan-sphere-fire.eps  sphere-frame-1.eps  sphere-frame-2.eps  sphere-frame-3.eps  sphere-frame-4.eps  sphere-frame-5.eps  sphere-frame-6.eps
Latex/sections/: acknowledgement.tex  conclusion.tex  introduction.tex  realData.tex  registration.tex  results.tex  simulation.tex  stateOfTheArt.tex
Organisational/: TODO.md  Workpackages.ods
mfi21/ieeeconf/: bibliographyJasper.bib  root.tex
mfi21/ieeeconf/graphics/: AutoVsMad.eps  AutoVsMad.fig  CompelemntaryVsMadgwick6seconds.eps  CompelemntaryVsMadgwick6seconds.fig  LTest.eps  LTest.fig  LTestSlide.eps  LTestSlide.fig  MadgwickVsComplementaryNoMovement.eps  MadgwickVsComplementaryNoMovement.fig  derivative.eps  derivative.fig  diffdistance.eps  diffdistance.fig  distance.eps  distance.fig  (+5 more)
tdp/DataSetSim/: Makefile  constants.hpp  dataset_sim.cpp  dataset_sim.hpp  parsing.cpp  parsing.hpp  robot.hpp  utils.cpp  utils.hpp
tdp/PCLimpr/: README.md
tdp/PCLimpr/src/: CMakeLists.txt  cluster.cc  ioplanes.cc  normalplane.cc  optimizer.cc  planereg.cc  planescan.cc
tdp/codeFromPi/: CMakeLists.txt  package.xml
tdp/datasets/: remove_empty_scans.sh
(+44 files in other folders)
